# communications

./: CMakeLists.txt  communacations_types.h  communications.h  readme.md
tcp/impl/: client.cpp  client_session.cpp  server.cpp
tcp/test/: main.cpp  tcp_server.cpp
udp/multicast/impl/: client.cpp
udp/multicast/test/: multicast_client.cpp
